added settings in pom.xml for self contained jar file build with jdk 17